--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -525,8 +525,11 @@ examples: camera range space door
 
 
 \section{Hierarchy}
+Architectural concepts and qualitative spatial attributes are build on top of the physical / structural and artefactual geometries of the design in a hierarchical structure. Architectural concepts are defined by combining qualitative spatial attributes via the logical operators of conjunction and disjunction. The definition of an architectural concept is not limited to combining qualitative spatial attributes, spatial relationships of orientation, topology, and distance can be used as well as other geometric primitives such as area, angle, and length measurements. Similarly, qualitative spatial attributes in architecture are built by combining qualitative spatial relationships of orientation, topology, and distance. 
 
+This design hierarchy is built on the notion of the design space, quality space, and quantity space. The design space is the highest level involved with the semantics of design. The quantitative level is the lowest level that involves the precise geometries and structures of the design. The middle layer, the qualitative space, mediates the two via qualitative spatial representations of orientation, topology, and distance.
 
+Figure XXX shows the design hierarchy of the DSpace reasoner.
 
 \chapter{Museum Case Study}
 This chapter is a case study that demonstrates the application of the DSpace reasoner to the design of an art museum. The purpose is twofold: first, to examine several design requirements of an art museum with regards to the spatial interpretation of the requirements; and second, to show how the museum design requirements can be represented and reasoned about in a computational framework, in order to detect design inconsistencies as per the design requirements.
